# autorecorder

./: .gitignore  BUILD.md  CHANGELOG.md  COMPILE_FIX.md  COMPILE_OPTIONS.md  CONFIG.md  Cargo.toml  DELIVERY_NOTES.md  DEVELOPMENT.md  FILE_MANIFEST.md  GUI_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_WINDOWS.md  README_ZH.md  RELEASE_v0.2.0.md  START_HERE.txt  STEREO_MIX_GUIDE.md  TROUBLESHOOTING.md  UPDATE_NOTES.md  USER_GUIDE_CN.md  VERIFICATION.md  WINDOWS_FIX.md  WeChatRecorder.sln  build.bat  build.sh  config.example.json  config.example.toml  convert_to_mp3.bat  convert_to_mp3.sh  create_shortcut.bat  diagnose.bat  launcher.bat  start_gui.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: TEST.yml  auto-tag  auto-tag.yml  ci.yml  keygen.yml  keygen1.yml  release.yml
WeChatRecorder/: WeChatRecorder.cpp  WeChatRecorder.rc  WeChatRecorder.rc.backup  WeChatRecorder.vcxproj  WeChatRecorder.vcxproj.filters  lame_recorder.cpp  lame_recorder.h  resource.h  wasapi_recorder.cpp  wasapi_recorder.h
src/: audio_capture.rs  config.rs  dual_recorder.rs  encoder.rs  gui.rs  main.rs  mic_detector.rs  mp3_encoder.rs  process_monitor.rs  recorder.rs  recorder_core.rs  smart_recorder.rs
